# PolIkea

./: .gitignore  CMakeLists.txt  HouseGen.h  Logic.hpp  Parameters.hpp  README.md  Starter.hpp  UniformBuffers.h  VTemplate.cpp  Vertex.h  WorldView.hpp  notes.txt  shaders_c
decrypted_models/: door_009_Mesh.112.mgcg.gltf
decrypted_models/furniture/: armchair_002_Mesh.6432.mgcg.gltf  armchair_007_Mesh.080.mgcg.gltf  armchair_012_Mesh.534.mgcg.gltf  bathroom_item_011_Mesh.622.mgcg.gltf  bathroom_item_013_Mesh.174.mgcg.gltf  bathroom_item_022_Mesh.579.mgcg.gltf  bathroom_item_025_Mesh.6441.mgcg.gltf  closet_003_Mesh.055.mgcg.gltf  entertainment_025_Mesh.6626.mgcg.gltf  lounge_chair_001_Mesh.062.mgcg.gltf  lounge_chair_016_Mesh.603.mgcg.gltf  musical_instrument_011_Mesh.305.mgcg.gltf  shelf_012_Mesh.273.mgcg.gltf  (+3 more)
headers/: stb_image.h  stb_image_write.h  tiny_gltf.h
models/: armchair_002_Mesh.6432.mgcg  bathroom_item_021_Mesh.577.mgcg  door_009_Mesh.112.mgcg
shaders/: Overlay.frag  Overlay.vert  OverlayFrag.spv  OverlayVert.spv  Shader.frag  Shader.vert  ShaderFraInstanced.spv  ShaderFrag.spv  ShaderFragMultiTexture.spv  ShaderInstanced.frag  ShaderInstanced.vert  ShaderInstancedFrag.spv  ShaderInstancedVert.spv  ShaderMultiTexture.frag  ShaderMultiTexture.vert  ShaderVert.spv  ShaderVertInstanced.spv  ShaderVertMultiTexture.spv  ShaderVertOffscreen.spv  VColor.frag  VColor.vert  VColorFrag.spv  VColorFragInstance.spv  VColorInstance.frag  VColorInstance.vert  VColorVert.spv  VColorVertInstance.spv  offscreen.vert  test.frag  test.vert  testFrag.spv  testVert.spv
(+31 files in other folders)
